# meshtad

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  meshtad.service  pyproject.toml
docs/superpowers/plans/: 2026-06-09-per-sender-auto-delete.md
docs/superpowers/specs/: 2026-06-09-per-sender-auto-delete-design.md
meshtad/: __init__.py  __main__.py  cli.py  config.py  daemon.py  db.py  main.py  radio.py
meshtad/tui/: app.py  heartbeat.py  screens.py
meshtad/tui/screens/: __init__.py  compose.py  inbox.py  modals.py
scripts/: mockdata.py
tests/: conftest.py  test_ack_race.py  test_broadcast_filter.py  test_cli.py  test_cli_import.py  test_cli_retry.py  test_config.py  test_config_edge.py  test_config_file.py  test_daemon.py  test_daemon_config_reload.py  test_db.py  test_db_thread.py  test_main_wiring.py  test_modal_alias.py  test_monotonic_timeout.py  test_radio_detect.py  test_shutdown.py  test_tui_3a.py  test_tui_3b.py  test_tui_3c.py  test_tui_3d.py  test_tui_3e.py
