[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshtad"
version = "0.1.0"
description = "Generic Meshtastic store-and-forward daemon with thin SQLite clients"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "meshtastic>=2.7.0",
    "pyserial>=3.5",
    "textual>=0.50",
]

[project.optional-dependencies]
tui = [
    "textual>=0.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
meshtad = "meshtad.main:main"
meshcli = "meshtad.cli:main"
meshtui = "meshtad.tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["meshtad"]
